se arreglan diseño y se agregan productos del negocio

--- a/productos/index.html
+++ b/productos/index.html
@@ -27,67 +27,114 @@
     <div class="filtros">
         <button class="btn-filtro activo" data-filtro="todos">Todos</button>
         <button class="btn-filtro" data-filtro="carnes">Carnes</button>
-        <button class="btn-filtro" data-filtro="embutidos">Embutidos</button>
         <button class="btn-filtro" data-filtro="huevos">Huevos</button>
+        <button class="btn-filtro" data-filtro="otros">Otros</button>
     </div>
 
     <section class="productos-lista">
         <div class="producto-card" data-categoria="carnes">
-            <img src="../images/cerdo-lomo.jpg" alt="Carne de Cerdo - Lomo" class="img-producto-img">
-            <h3>Carne de Cerdo - Lomo</h3>
-            <p class="descripcion">Corte de lomo fresco y tierno</p>
-            <span class="precio">$8.50/kg</span>
-            <button class="btn-beneficios" data-producto="Carne de Cerdo - Lomo">Ver Beneficios</button>
+            <img src="../images/Costillita.jpg" alt="Costilla de Res" class="img-producto-img">
+            <h3>Costilla de Res</h3>
+            <p class="descripcion">Perfecta para asar y preparaciones tradicionales</p>
+            <span class="precio">$20.000/kg</span>
+            <button class="btn-beneficios" data-producto="Costilla de Res">Ver Beneficios</button>
         </div>
 
         <div class="producto-card" data-categoria="carnes">
-            <img src="../images/cerdo-costilla.jpg" alt="Carne de Cerdo - Costilla" class="img-producto-img">
-            <h3>Carne de Cerdo - Costilla</h3>
-            <p class="descripcion">Costillas frescas perfectas para asar</p>
-            <span class="precio">$7.20/kg</span>
-            <button class="btn-beneficios" data-producto="Carne de Cerdo - Costilla">Ver Beneficios</button>
+            <img src="../images/carne_res.jpg" alt="Carne Blanda" class="img-producto-img">
+            <h3>Carne Blanda</h3>
+            <p class="descripcion">Corte selecto y muy fresco</p>
+            <span class="precio">$28.000/kg</span>
+            <button class="btn-beneficios" data-producto="Carne Blanda">Ver Beneficios</button>
         </div>
 
         <div class="producto-card" data-categoria="carnes">
-            <img src="../images/carne_res.jpg" alt="Carne - Res" class="img-producto-img">
-            <h3>Carne - Res</h3>
-            <p class="descripcion">Corte fino de res seleccionada</p>
-            <span class="precio">$12.00/kg</span>
-            <button class="btn-beneficios" data-producto="Carne - Res">Ver Beneficios</button>
+            <img src="../images/lomitodecerdo.jpg" alt="Lomo" class="img-producto-img">
+            <h3>Lomo</h3>
+            <p class="descripcion">Corte premium de excelente calidad</p>
+            <span class="precio">$22.000/kg</span>
+            <button class="btn-beneficios" data-producto="Lomo">Ver Beneficios</button>
         </div>
 
-        <div class="producto-card" data-categoria="embutidos">
-            <img src="../images/jamon.jpg" alt="Jamón Serrano" class="img-producto-img">
-            <h3>Jamón Serrano</h3>
-            <p class="descripcion">Jamón artesanal de excelente calidad</p>
-            <span class="precio">$10.50/kg</span>
-            <button class="btn-beneficios" data-producto="Jamón Serrano">Ver Beneficios</button>
+        <div class="producto-card" data-categoria="carnes">
+            <img src="../images/carnitamolida.jpg" alt="Carne Molida" class="img-producto-img">
+            <h3>Carne Molida</h3>
+            <p class="descripcion">Fresca y versátil para múltiples recetas</p>
+            <span class="precio">$20.000/kg</span>
+            <button class="btn-beneficios" data-producto="Carne Molida">Ver Beneficios</button>
         </div>
 
-        <div class="producto-card" data-categoria="embutidos">
-            <img src="../images/chorizo.jpg" alt="Chorizo Casero" class="img-producto-img">
-            <h3>Chorizo Casero</h3>
-            <p class="descripcion">Chorizo fresco preparado diariamente</p>
-            <span class="precio">$6.00/kg</span>
-            <button class="btn-beneficios" data-producto="Chorizo Casero">Ver Beneficios</button>
+        <div class="producto-card" data-categoria="carnes">
+            <img src="../images/Tocinito.jpg" alt="Tocino" class="img-producto-img">
+            <h3>Tocino</h3>
+            <p class="descripcion">Excelente para desayunos energéticos</p>
+            <span class="precio">$11.000/kg</span>
+            <button class="btn-beneficios" data-producto="Tocino">Ver Beneficios</button>
         </div>
 
-        <div class="producto-card" data-categoria="embutidos">
-            <img src="../images/morcilla.jpg" alt="Morcilla" class="img-producto-img">
-            <h3>Morcilla</h3>
-            <p class="descripcion">Morcilla tradicional de la región</p>
-            <span class="precio">$5.50/kg</span>
-            <button class="btn-beneficios" data-producto="Morcilla">Ver Beneficios</button>
+        <div class="producto-card" data-categoria="carnes">
+            <img src="../images/pollitocrudo.jpg" alt="Pollo" class="img-producto-img">
+            <h3>Pollo</h3>
+            <p class="descripcion">Proteína magra y saludable</p>
+            <span class="precio">$13.000/kg</span>
+            <button class="btn-beneficios" data-producto="Pollo">Ver Beneficios</button>
+        </div>
+
+        <div class="producto-card" data-categoria="carnes">
+            <img src="../images/Pollito.jpg" alt="Pechuga" class="img-producto-img">
+            <h3>Pechuga</h3>
+            <p class="descripcion">Corte magro y delicado</p>
+            <span class="precio">$19.500/kg</span>
+            <button class="btn-beneficios" data-producto="Pechuga">Ver Beneficios</button>
         </div>
 
         <div class="producto-card" data-categoria="huevos">
-            <img src="../images/huevos1.jpg" alt="Huevos Frescos - Carton" class="img-producto-img">
-            <h3>Huevos Frescos - Carton</h3>
-            <p class="descripcion">Huevos de granja recién recolectados</p>
-            <span class="precio">$3.50/Carton</span>
-            <button class="btn-beneficios" data-producto="Huevos Frescos - Carton">Ver Beneficios</button>
+            <img src="../images/huevos1.jpg" alt="Huevos" class="img-producto-img">
+            <h3>Huevos</h3>
+            <p class="descripcion">Huevos frescos de granja recién recolectados</p>
+            <span class="precio">$12.500/kg</span>
+            <button class="btn-beneficios" data-producto="Huevos">Ver Beneficios</button>
         </div>
 
+        <div class="producto-card" data-categoria="otros">
+            <img src="../images/Quesito.jpg" alt="Quesos" class="img-producto-img">
+            <h3>Quesos</h3>
+            <p class="descripcion">Producto artesanal de excelente calidad</p>
+            <span class="precio">$22.000/kg</span>
+            <button class="btn-beneficios" data-producto="Quesos">Ver Beneficios</button>
+        </div>
+
+        <div class="producto-card" data-categoria="carnes">
+            <img src="../images/higadito.jpg" alt="Hígado de Res" class="img-producto-img">
+            <h3>Hígado de Res</h3>
+            <p class="descripcion">Nutrición concentrada y saludable</p>
+            <span class="precio">$20.000/kg</span>
+            <button class="btn-beneficios" data-producto="Hígado de Res">Ver Beneficios</button>
+        </div>
+
+        <div class="producto-card" data-categoria="otros">
+            <img src="../images/suerito.jpg" alt="Suero Costeño" class="img-producto-img">
+            <h3>Suero Costeño</h3>
+            <p class="descripcion">Producto típico costeño de tradición</p>
+            <span class="precio">$6.000/kg</span>
+            <button class="btn-beneficios" data-producto="Suero Costeño">Ver Beneficios</button>
+        </div>
+
+        <div class="producto-card" data-categoria="huevos">
+            <img src="../images/Huevitos.jpg" alt="Huevos codorniz" class="img-producto-img">
+            <h3>Huevos codorniz</h3>
+            <p class="descripcion">Frescos y de granja</p>
+            <span class="precio">$6.000/kg</span>
+            <button class="btn-beneficios" data-producto="Huevos codorniz">Ver Beneficios</button>
+        </div>
+
+        <div class="producto-card" data-categoria="otros">
+            <img src="../images/especiecitas.jpg" alt="Especias" class="img-producto-img">
+            <h3>Especias para acompañar tus comidas</h3>
+            <p class="descripcion">Gran variedad para tu gusto</p>
+            <span class="precio">$1.500/por paquete</span>
+            <button class="btn-beneficios" data-producto="Especias">Ver Beneficios</button>
+        </div>
 
     </section>
 
